macroweave/tests/ui/err/empty_input_value.rs
use macroweave::repeat;

fn main() {
    repeat!(value in [one,, two] {
        let _ = value;
    });
}
